added all files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="container">
+        <div class="watch-container">
+            <div id="timer" class="time-view">
+                <h1 class="time-heading">Stop Watch</h1>
+                <span>00:</span><span>00:</span><span>000</span>
+            </div>
+            <div class="buttons-container">
+                <button id="start" class="button">start</button>
+                <button id="pause" class="button">pause</button>
+                <button id="reset" class="button">reset</button>
+            </div>
+        </div>
+    </div>
     <script  type="module" src="./src/init.js"></script>
 </body>
 </html>
